[gd_scene load_steps=10 format=3 uid="uid://dlpcx627omgjr"]

[ext_resource type="Script" path="res://Scripts/henrico.gd" id="1_ejeg1"]
[ext_resource type="Texture2D" uid="uid://d2t3fy564gwnn" path="res://Assets/Sprites/enenmy.png" id="1_kj0cn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6raok"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ue1mk"]
atlas = ExtResource("1_kj0cn")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_87t3p"]
atlas = ExtResource("1_kj0cn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvidj"]
atlas = ExtResource("1_kj0cn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx8ls"]
atlas = ExtResource("1_kj0cn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_mcgva"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ue1mk")
}],
"loop": false,
"name": &"Die",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_87t3p")
}],
"loop": true,
"name": &"PlatformDie",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_87t3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvidj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx8ls")
}],
"loop": true,
"name": &"Walk",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sqf0k"]
size = Vector2(14, 2)

[node name="Henrico" type="CharacterBody2D"]
collision_layer = 256
collision_mask = 256
script = ExtResource("1_ejeg1")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -8)
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_6raok")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_mcgva")
animation = &"Die"
autoplay = "Walk"
frame_progress = 1.0

[node name="RightRayCast" type="RayCast2D" parent="."]
position = Vector2(12, -16)
target_position = Vector2(0, 22)
collision_mask = 259
collide_with_areas = true

[node name="LeftRayCast" type="RayCast2D" parent="."]
position = Vector2(-13, -16)
target_position = Vector2(0, 22)
collision_mask = 259
collide_with_areas = true

[node name="PhysicsCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_sqf0k")

[node name="MoveAfter" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DeleteTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="MoveAfter" to="." method="_on_move_after_timeout"]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_delete_timer_timeout"]
